--- a/index.html
+++ b/index.html
@@ -54,6 +54,6 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.7/d3.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <script src="/js/charts.js"></script>
+    <script src="https://github.com/clarerobb/biodiversity/blob/9fb35e110666581ce7e9d8ebe153e63ecd81c642/js/charts.js"></script>
 </body>
 </html>
